# UnionLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: RunTest.yml
docs/: CMakeLists.txt  Doxyfile.in  requirements.txt
docs/source/: conf.py  index.md
docs/source/utils/: FileReaderSelector.md  ReadFileIntf.md
include/: UnionType
include_private/: AScanType.hpp
include_private/390N_T8/: json.hpp  ldat.hpp
include_private/ASCAN/: AScan.pb.h  AScan.proto  AScanType.hpp  Specialization.hpp
include_private/ASCAN/330/: _330_common.hpp  _330_draw_dac.hpp  _lzw.h  das.hpp  dat.hpp  lzw.hpp  serial_330.hpp
include_private/ASCAN/390/: daa.hpp  hfdat.hpp
include_private/ASCAN/390N_T8/: 390N&T8文件数据结构.drawio  MDATType.hpp  _MDATType.hpp  json.hpp  ldat.hpp  vdata.hpp  离线软件A扫参数(.mdat).md
include_private/ASCAN/doc/: AScan.Proto.md
include_private/Bridge/: HDBridge.hpp  HDBridge.pb.h  HDBridge.proto
include_private/Bridge/12CH_USB/: _12CH_USB.hpp
include_private/Bridge/8CH_USB/: _8CH_USB.hpp
include_private/Bridge/Emulator/: Emulator.hpp
include_private/TOFD_MULTI/9x0/: TofdBridge.h  TofdDefine.h
include_private/TOFD_PE/: TofdPeType.hpp  tofd_pe.hpp  tofd_pe数据结构.drawio
include_private/TOFD_PE/TOF/: tof.hpp
include_private/TOFD_PE/TPE/: tpe.hpp
include_private/common/: AVG.hpp  BlockingQueue.hpp  DAC.hpp  FileReaderSelector.hpp  Gate.hpp  Performance.hpp  Probe.hpp  common.hpp  union_common.hpp
src/: AScanType.cpp
src/390N_T8/: json.cpp  ldat.cpp
src/ASCAN/: AScan.pb.cc  AScanType.cpp
src/ASCAN/330/: _330_draw_dac.cpp  _lzw.cpp  constant.h  das.cpp  dat.cpp  dat330_single.cpp  dat330_single.h  define_dat.h  lzw.cpp  serial_330.cpp
src/ASCAN/390/: daa.cpp  hfdat.cpp
src/ASCAN/390N_T8/: MDATType.cpp  json.cpp  ldat.cpp  vdata.cpp
src/Bridge/: HDBridge.cpp  HDBridge.pb.cc
src/Bridge/12CH_USB/: _12CH_USB.cpp
src/Bridge/8CH_USB/: _8CH_USB.cpp
src/Bridge/Emulator/: Emulator.cpp
src/TOFD_MULTI/9x0/: TofdBridge.cpp
src/TOFD_PE/: tofd_pe.cpp
src/TOFD_PE/TOF/: tof.cpp
src/TOFD_PE/TPE/: tpe.cpp
src/common/: AVG.cpp  DAC.cpp  FileReaderSelector.cpp  Gate.cpp  Probe.cpp  common.cpp  union_common.cpp
test/: CMakeLists.txt  main.cpp  test_union.cpp
test/test_file/: 1.LDAT  1.tof  2.tpe  2024-05-13.daa  3322.tof  4.das  serial.cod
utils/: realizable.py  utils.py
